Level linking implemented