@@ -5,6 +5,7 @@ import com.kyaniteteam.radioactive.entities.boats.EnemyBoat;
 import com.kyaniteteam.radioactive.entities.boats.PlayerBoat;
 import com.kyaniteteam.radioactive.entities.decor.Shark;
 import com.kyaniteteam.radioactive.terrain.Depth;
+import com.kyaniteteam.radioactive.ui.PostHUD;
 import com.rubynaxela.kyanite.game.GameContext;
 import com.rubynaxela.kyanite.game.Scene;
 import com.rubynaxela.kyanite.game.assets.AudioHandler;
@@ -13,23 +14,21 @@ import org.jetbrains.annotations.NotNull;
 import org.jsfml.graphics.Color;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class GameScene extends Scene {
 
-    private static final AudioHandler audioHandler = GameContext.getInstance().getAudioHandler();
+    private static final GameState gameState = GameContext.getInstance().getResource("data.game_state");
     private final Background backgroundShader = new Background();
-    private final PlayerBoat player = new PlayerBoat(this);
-
-    private final Depth depth3 = new Depth(this, 0.25f, 1);
-    private final Depth depth1 = new Depth(this, 0.5f, 2);
-    private final Depth depth2 = new Depth(this, 1, 10);
+    private final PlayerBoat player;
 
     private float latestShark = Float.NEGATIVE_INFINITY, nextShark = 8f;
 
     public GameScene(@NotNull SceneLoader.SceneData data) {
+        gameState.setBarrels(data.barrels).setFuel(100);
         data.enemies.stream().map(e -> e.createEnemyBoat(this)).forEach(EnemyBoat::addToScene);
+        data.depths.stream().map(d -> d.createDepth(this)).forEach(this::add);
         setBackgroundColor(new Color(40, 40, 80));
+        player = new PlayerBoat(this);
     }
 
     public PlayerBoat getPlayer() {
@@ -37,26 +36,21 @@ public class GameScene extends Scene {
     }
 
     public List<DroppedBarrel> getBarrels() {
-        return drawables.stream().filter(b -> b instanceof DroppedBarrel)
-                        .map(b -> (DroppedBarrel) b).collect(Collectors.toList());
+        return drawables.stream().filter(b -> b instanceof DroppedBarrel).map(b -> (DroppedBarrel) b).toList();
     }
 
     public List<EnemyBoat> getEnemyBoats() {
-        return drawables.stream().filter(b -> b instanceof EnemyBoat)
-                        .map(b -> (EnemyBoat) b).collect(Collectors.toList());
+        return drawables.stream().filter(b -> b instanceof EnemyBoat).map(b -> (EnemyBoat) b).toList();
     }
 
     public List<Depth> getDepths() {
-        return drawables.stream().filter(d -> d instanceof Depth)
-                        .map(d -> (Depth) d).collect(Collectors.toList());
+        return drawables.stream().filter(d -> d instanceof Depth).map(d -> (Depth) d).toList();
     }
 
     @Override
     protected void init() {
         add(backgroundShader);
-        add(depth1, depth2, depth3);
         add(player);
-        audioHandler.playSound("sound.astronomia", "music", 100, 1, true);
     }
 
     @Override
@@ -66,6 +60,10 @@ public class GameScene extends Scene {
             nextShark = MathUtils.randomFloat(8, 16);
             scheduleToAdd(new Shark(this));
             latestShark = elapsedTime;
+        }
+        if (gameState.barrels == 0) {
+            getContext().getWindow().setHUD(new PostHUD());
+            suspend();
         }
     }
 }
